fix: 수정요청 반영: gap 수정, 문구 대문자 반영

--- a/packages/ui/src/widgets/invitation/Home/Home.module.css
+++ b/packages/ui/src/widgets/invitation/Home/Home.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 48px;
+  gap: 100px;
 }
 .imgContainer {
   position: relative;
